--- a/housing-price-analysis.ipynb
+++ b/housing-price-analysis.ipynb
@@ -1526,6 +1526,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_num_pre = num_pipeline.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_prepared = np.concatenate((housing_num_pre, bins), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16512, 17)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.15604281,  0.77194962,  0.74333089, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-1.17602483,  0.6596948 , -1.1653172 , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 1.18684903, -1.34218285,  0.18664186, ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       ...,\n",
+       "       [ 1.58648943, -0.72478134, -1.56295222, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.78221312, -0.85106801,  0.18664186, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-1.43579109,  0.99645926,  1.85670895, ...,  0.        ,\n",
+       "         1.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
