--- a/housing-price-analysis.ipynb
+++ b/housing-price-analysis.ipynb
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2675f80f898>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca96ada358>"
       ]
      },
      "execution_count": 12,
@@ -642,7 +642,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2675faa5ef0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca9748de10>"
       ]
      },
      "execution_count": 17,
@@ -680,7 +680,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2675fafe198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca96bbd8d0>"
       ]
      },
      "execution_count": 18,
@@ -710,7 +710,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2675faa5fd0>"
+       "<matplotlib.legend.Legend at 0x1ca96b6aeb8>"
       ]
      },
      "execution_count": 19,
@@ -788,22 +788,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002675D2EF780>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675DD639B0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675DDD6860>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675DD71860>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002675CF487F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675CF487B8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675DDCD668>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675D4B2898>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002675D474080>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675D507128>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675D539FD0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675D4F1EB8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002675DE3F7B8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675D5C05C0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675DD147B8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002675D608160>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA972E1B00>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA97411550>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA969EF208>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96A226D8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96A4AC18>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96A4ABA8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA993A9780>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA993B5E10>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967D44E0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967F3B70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967FC240>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967E68D0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA9679EF60>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967AA630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96769CC0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA977E5390>]],\n",
        "      dtype=object)"
       ]
      },
@@ -838,7 +838,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2675ddc4ac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca97827e48>"
       ]
      },
      "execution_count": 23,
@@ -881,7 +881,16 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:66: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import Imputer\n",
     "\n",
@@ -1165,7 +1174,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 4, ..., 1, 0, 3], dtype=int64)"
+       "array([0, 0, 4, ..., 1, 0, 3])"
       ]
      },
      "execution_count": 34,
@@ -1198,7 +1207,18 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:414: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
@@ -1357,7 +1377,16 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:66: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -1439,7 +1468,16 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:66: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "num_attribs = list(housing_num)\n",
     "cat_attribs = [\"ocean_proximity\"]\n",
@@ -1534,7 +1572,7 @@
     {
      "data": {
       "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
      "execution_count": 50,
@@ -1636,7 +1674,7 @@
     {
      "data": {
       "text/plain": [
-       "68628.19819848922"
+       "68628.19819848923"
       ]
      },
      "execution_count": 56,
@@ -1654,7 +1692,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let"
+    "Let's try something different now. Because this is not good for the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(housing_prepared, housing_labels)\n",
+    "housing_predictions = tree_reg.predict(housing_prepared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "tree_mse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "scores = cross_val_score(tree_reg, housing_prepared, housing_labels,\n",
+    "                         scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "tree_rmse_scores = np.sqrt(-scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [69202.11790075 67910.10640354 70490.35632612 68701.51216761\n",
+      " 71159.73813013 76740.52622652 70291.01307161 70509.8317155\n",
+      " 76893.8907698  69910.62725245]\n",
+      "Mean: 71180.9719964034\n",
+      "Standard Deviation: 2960.436847226694\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_scores(scores):\n",
+    "    print(\"Scores:\", scores)\n",
+    "    print(\"Mean:\", scores.mean())\n",
+    "    print(\"Standard Deviation:\", scores.std())\n",
+    "    \n",
+    "display_scores(tree_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Score is as bad as `LinearRegressor`. Now, let's try `RandomForestRegressor`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "forest_reg.fit(housing_prepared, housing_labels)\n",
+    "housing_predictions = forest_reg.predict(housing_prepared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22238.28114383484"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forest_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "forest_rmse = np.sqrt(forest_mse)\n",
+    "forest_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = cross_val_score(forest_reg, housing_prepared, housing_labels,\n",
+    "                        scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "forest_rmse_scores = np.sqrt(-scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [52616.83640555 49242.01546869 52212.52696538 54865.52151234\n",
+      " 51385.96820894 55268.83198677 51657.60117103 51040.0435244\n",
+      " 55563.97547671 52588.403311  ]\n",
+      "Mean: 52644.17240308188\n",
+      "Standard Deviation: 1929.8434359362004\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_scores(forest_rmse_scores)"
    ]
   }
  ],
