--- a/housing-price-analysis.ipynb
+++ b/housing-price-analysis.ipynb
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca96ada358>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e12a597978>"
       ]
      },
      "execution_count": 12,
@@ -642,7 +642,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca9748de10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e12a670c50>"
       ]
      },
      "execution_count": 17,
@@ -680,7 +680,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca96bbd8d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e12a462c88>"
       ]
      },
      "execution_count": 18,
@@ -710,7 +710,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ca96b6aeb8>"
+       "<matplotlib.legend.Legend at 0x1e12af88c88>"
       ]
      },
      "execution_count": 19,
@@ -788,22 +788,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA972E1B00>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA97411550>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA969EF208>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96A226D8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96A4AC18>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96A4ABA8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA993A9780>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA993B5E10>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967D44E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967F3B70>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967FC240>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967E68D0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001CA9679EF60>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA967AA630>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA96769CC0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001CA977E5390>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A78F8D0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12AF6F518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A4F3160>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A50AC50>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A531BE0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A531208>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A2027F0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A20BE80>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A292550>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A29CBE0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A2A72B0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A2B3940>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A271FD0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A2626A0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12A2D7D30>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E12B2D6400>]],\n",
        "      dtype=object)"
       ]
      },
@@ -838,7 +838,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca97827e48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e12b31dda0>"
       ]
      },
      "execution_count": 23,
@@ -1760,11 +1760,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [69202.11790075 67910.10640354 70490.35632612 68701.51216761\n",
-      " 71159.73813013 76740.52622652 70291.01307161 70509.8317155\n",
-      " 76893.8907698  69910.62725245]\n",
-      "Mean: 71180.9719964034\n",
-      "Standard Deviation: 2960.436847226694\n"
+      "Scores: [69518.49255283 67777.23591592 71670.58400787 68792.22020012\n",
+      " 71846.61694364 75557.89054457 71672.49285903 69575.57029151\n",
+      " 77175.66985291 69971.95347917]\n",
+      "Mean: 71355.87266475664\n",
+      "Standard Deviation: 2825.008753355491\n"
      ]
     }
    ],
@@ -1814,7 +1814,7 @@
     {
      "data": {
       "text/plain": [
-       "22238.28114383484"
+       "22063.47066340144"
       ]
      },
      "execution_count": 62,
@@ -1848,16 +1848,230 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [52616.83640555 49242.01546869 52212.52696538 54865.52151234\n",
-      " 51385.96820894 55268.83198677 51657.60117103 51040.0435244\n",
-      " 55563.97547671 52588.403311  ]\n",
-      "Mean: 52644.17240308188\n",
-      "Standard Deviation: 1929.8434359362004\n"
+      "Scores: [51796.10543554 50409.74427222 51732.76622312 54191.45754417\n",
+      " 52726.28144373 56664.74489529 51304.08398772 50454.69059675\n",
+      " 55415.76712653 51679.12485208]\n",
+      "Mean: 52637.4766377146\n",
+      "Standard Deviation: 2007.7514174088901\n"
      ]
     }
    ],
    "source": [
     "display_scores(forest_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fine-tuning the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "             estimator=RandomForestRegressor(bootstrap=True, criterion='mse',\n",
+       "                                             max_depth=None,\n",
+       "                                             max_features='auto',\n",
+       "                                             max_leaf_nodes=None,\n",
+       "                                             min_impurity_decrease=0.0,\n",
+       "                                             min_impurity_split=None,\n",
+       "                                             min_samples_leaf=1,\n",
+       "                                             min_samples_split=2,\n",
+       "                                             min_weight_fraction_leaf=0.0,\n",
+       "                                             n_estimators='warn', n_jobs=None,\n",
+       "                                             oob_score=False, random_state=None,\n",
+       "                                             verbose=0, warm_start=False),\n",
+       "             iid='warn', n_jobs=None,\n",
+       "             param_grid=[{'max_features': [2, 4, 6, 8],\n",
+       "                          'n_estimators': [3, 10, 30]},\n",
+       "                         {'bootstrap': [False], 'max_features': [2, 3, 4],\n",
+       "                          'n_estimators': [3, 10]}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='neg_mean_squared_error', verbose=0)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3,10,30], 'max_features': [2,4,6,8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3,10], 'max_features': [2,3,4]},\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
+    "                          scoring='neg_mean_squared_error')\n",
+    "\n",
+    "grid_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 6, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "                      max_features=6, max_leaf_nodes=None,\n",
+       "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                      min_samples_leaf=1, min_samples_split=2,\n",
+       "                      min_weight_fraction_leaf=0.0, n_estimators=30,\n",
+       "                      n_jobs=None, oob_score=False, random_state=None,\n",
+       "                      verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cvres = grid_search.cv_results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63579.014401763685 {'max_features': 2, 'n_estimators': 3}\n",
+      "55268.55063956575 {'max_features': 2, 'n_estimators': 10}\n",
+      "52878.068652537535 {'max_features': 2, 'n_estimators': 30}\n",
+      "59383.240583808285 {'max_features': 4, 'n_estimators': 3}\n",
+      "52469.34046896928 {'max_features': 4, 'n_estimators': 10}\n",
+      "50511.66010201821 {'max_features': 4, 'n_estimators': 30}\n",
+      "60241.12971797717 {'max_features': 6, 'n_estimators': 3}\n",
+      "52124.32392563604 {'max_features': 6, 'n_estimators': 10}\n",
+      "50119.01996726985 {'max_features': 6, 'n_estimators': 30}\n",
+      "59270.80730950171 {'max_features': 8, 'n_estimators': 3}\n",
+      "52246.41287629788 {'max_features': 8, 'n_estimators': 10}\n",
+      "50310.43878625269 {'max_features': 8, 'n_estimators': 30}\n",
+      "62118.11259226167 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "54332.13021819115 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "60855.31957050666 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "53337.881123301726 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "58459.692452016105 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "51710.04300349555 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating on Test Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is time to evaluate the system on test set and see how is it performing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "X_test_prepared = full_pipeline.transform(X_test)\n",
+    "final_predictions = final_model.predict(X_test_prepared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_mse = mean_squared_error(y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47610.75111545187"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_rmse"
    ]
   }
  ],
